--- a/css/app.css
+++ b/css/app.css
@@ -7,8 +7,13 @@ div.spicy div {
 
 .css-form input.ng-invalid.ng-touched {
     background-color: #FA787E;
-  }
+}
 
-  .css-form input.ng-valid.ng-touched {
-    background-color: #78FA89;
-  }
+.css-form input.ng-valid.ng-touched {
+  background-color: #78FA89;
+}
+
+div[contentEditable] {
+    cursor: pointer;
+    background-color: #D0D0D0;
+}
